SET(SUB_NAME glew)

FILE(GLOB SRC
    ${CMAKE_CURRENT_LIST_DIR}/../dependencies/im3d/examples/common/GL/*
    ) 
ADD_LIBRARY(${SUB_NAME}
    ${SRC}
    )
TARGET_COMPILE_DEFINITIONS(${SUB_NAME} PUBLIC
    GLEW_BUILD
    )
TARGET_INCLUDE_DIRECTORIES(${SUB_NAME} PUBLIC
    )
TARGET_LINK_LIBRARIES(${SUB_NAME}
    # OPENGL32
    )
