SET(SUB_NAME im3d)

FILE(GLOB SRC
    ${CMAKE_CURRENT_LIST_DIR}/../dependencies/im3d/im3d.cpp
    ) 
ADD_LIBRARY(${SUB_NAME}
    ${SRC}
    )
TARGET_COMPILE_DEFINITIONS(${SUB_NAME} PUBLIC
    )
TARGET_INCLUDE_DIRECTORIES(${SUB_NAME} PUBLIC
    )
TARGET_LINK_LIBRARIES(${SUB_NAME}
    )
